--- a/form/slider.html
+++ b/form/slider.html
@@ -3,7 +3,7 @@ layout: documentation
 title: Slider
 doc-tab: form
 doc-subtab: slider
-npm-version: 0.1.1
+npm-version: 2.0.0
 variables:
 - name: $slider-radius
   value: $radius
@@ -24,7 +24,7 @@ variables:
 - name: $slider-thumb-shadow
   value: none
 - name $slider-thumb-to-track-ratio
-  value: "2"
+  value: 2
 - name: $slider-output-width
   value: 3rem
 - name: $slider-output-background
