--- a/form/slider.html
+++ b/form/slider.html
@@ -29,6 +29,8 @@ variables:
   value: 3rem
 - name: $slider-output-background
   value: $grey-dark
+- name: $slider-output-radius
+  value: $radius
 ---
 
 {% include subnav-form.html %}
