--- a/form/slider.html
+++ b/form/slider.html
@@ -4,6 +4,9 @@ title: Slider
 doc-tab: form
 doc-subtab: slider
 npm-version: 2.0.0
+variables:
+- name: $switch-background
+  value: $grey-light
 ---
 
 {% include subnav-form.html %}
