--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ doc-subtab: start
         </p>
         <div class="has-text-info">
             <strong class="has-text-info">This is an example</strong> to integrate the <strong class="has-text-info">calendar</strong> extension.</div>
-        <p>Open you application's main sass file and add the following line:</p>
+        <p>Open your application's main <code>.sass</code> file and add the following line:</p>
         {% highlight bash %}@import 'bulma';
 @import '~bulma-calendar';{% endhighlight %}
         <p>Now you can build the bulma project with <code>npm run build</code> and the output will be available in the <code>css folder</code>.</p>
@@ -170,7 +170,7 @@ doc-subtab: start
           JavaScript integration
         </p>
         <div class="has-text-info"><strong class="has-text-info">This is an example</strong> to integrate the <strong class="has-text-info">calendar</strong> extension from NPM.</div>
-        <p>Open you application's main JavaScript file and add the following line:</p>
+        <p>Open your application's main JavaScript file and add the following line:</p>
         {% highlight javascript %}
 
 import bulmaCalendar from '/node_modules/bulma-extensions/bulma-calendar/dist/bulma-calendar.min.js';
