update pageloader documentation

--- a/elements/pageloader.html
+++ b/elements/pageloader.html
@@ -61,6 +61,8 @@ variables:
 
     <hr>
 
+    <p>To make pageloader visible just add <code>is-active</code> class modifier on the pageloader element.</p>
+
     <div class="columns">
       <div class="column">
         <button data-target="pageloader" class="button is-primary">Show Page-loader (3 sec only)</button>
