fix(pageloader): Update pageloader doc

--- a/elements/pageloader.html
+++ b/elements/pageloader.html
@@ -61,7 +61,8 @@ variables:
 
     <hr>
 
-    <p>To make pageloader visible just add <code>is-active</code> class modifier on the pageloader element.</p>
+    <div class="notification is-info has-texrt-centered">To make pageloader visible just add <code>is-active</code> class modifier on the
+      pageloader element.</div>
 
     <div class="columns">
       <div class="column">
