fix(tooltip): Update tooltip doc

--- a/elements/tooltip.html
+++ b/elements/tooltip.html
@@ -184,11 +184,7 @@ variables:
     </div>
 
     <h3 class="title">Arrow</h3>
-    <p>By default tooltip as no arrow. You can add it easily by adding the following class on the element:
-      <ul>
-        <li><code>.has-tooltip-arrow</code></li>
-      </ul>
-    </p>
+    <p>By default tooltip as no arrow. You can add it easily by using the <code>.has-tooltip-arrow</code> modifier.</p>
     {% include snippet.html content=tooltip_arrows_example size="one-half" %}
 
     {% include anchor.html name="Sizes" %}
