--- a/elements/tooltip.html
+++ b/elements/tooltip.html
@@ -183,9 +183,9 @@ variables:
       </div>
     </div>
 
-    <h3 class="title">Arrow</h3>
+    <!-- <h3 class="title">Arrow</h3>
     <p>By default tooltip as no arrow. You can add it easily by using the <code>.has-tooltip-arrow</code> modifier.</p>
-    {% include snippet.html content=tooltip_arrows_example size="one-half" %}
+    {% include snippet.html content=tooltip_arrows_example size="one-half" %} -->
 
     {% include anchor.html name="Sizes" %}
     <h4 class="subtitle">You can force multiline display by using the <code>.has-tooltip-multiline</code> modifier.</h4>
