update pageloader demo

--- a/elements/pageloader.html
+++ b/elements/pageloader.html
@@ -109,6 +109,7 @@ variables:
     <div id="pageloader" class="pageloader"><span class="title">Pageloader</span></div>
     <div id="pageloader2" class="pageloader is-right-to-left"><span class="title">Pageloader</span></div>
     <div id="pageloader3" class="pageloader is-left-to-right"><span class="title">Pageloader</span></div>
+    <div id="pageloader4" class="pageloader is-bottom-to-top"><span class="title">Pageloader</span></div>
   </div>
 </section>
 
