fix(tagsinput): Wrong js file path

--- a/form/tagsinput.html
+++ b/form/tagsinput.html
@@ -14,7 +14,8 @@ npm-version: 2.0.0
 {% endcapture %}
 
 {% capture tagsinput_js %}
-<script type="text/javascript" src="/node_modules/bulma-extensions/bulma-tagsinput/dist/bulma-tagsinput.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bulma-tagsinput@2.0.0/dist/js/bulma-tagsinput.min.js">
+</script>
 {% endcapture %}
 
 {% capture tagsinput_attach %}
@@ -92,7 +93,8 @@ bulmaTagsinput.attach();
   </div>
 </section>
 
-<script type="text/javascript" src="{{ site.url}}/node_modules/bulma-extensions/bulma-tagsinput/dist/js/bulma-tagsinput.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bulma-tagsinput@2.0.0/dist/js/bulma-tagsinput.min.js">
+</script>
 <script>
   bulmaTagsinput.attach();
 </script>
