--- a/form/tagsinput.html
+++ b/form/tagsinput.html
@@ -24,6 +24,13 @@ bulmaTagsinput.attach();
 
 <section class="section">
   <div class="container">
+    <article class="message is-warning">
+      <div class="message-body">
+        New version with a lot of new functionalities and its documentation is now available on its new repository <a href="https://github.com/CreativeBulma/bulma-tagsinput/"
+          target="_blank">CreativeBulma - BulmaTagsInput</a>.
+      </div>
+    </article>
+    
     <div class="columns">
       <div class="column">
         <h1 class="title">{{ page.title }}</h1>
