--- a/form/tagsinput/index.html
+++ b/form/tagsinput/index.html
@@ -210,6 +210,13 @@
 
 <section class="section">
   <div class="container">
+    <article class="message is-warning">
+      <div class="message-body">
+        New version with a lot of new functionalities and its documentation is now available on its new repository <a href="https://github.com/CreativeBulma/bulma-tagsinput/"
+          target="_blank">CreativeBulma - BulmaTagsInput</a>.
+      </div>
+    </article>
+    
     <div class="columns">
       <div class="column">
         <h1 class="title">TagsInput</h1>
