--- a/elements/tooltip/index.html
+++ b/elements/tooltip/index.html
@@ -212,6 +212,13 @@
 
 <section class="section">
   <div class="container">
+    <article class="message is-warning">
+      <div class="message-body">
+        New version and its documentation is now available on its new repository <a href="https://github.com/CreativeBulma/bulma-tooltip/"
+          target="_blank">CreativeBulma - BulmaTooltipt</a>.
+      </div>
+    </article>
+    
     <div class="columns">
       <div class="column">
         <h1 class="title">Tooltip</h1>
