--- a/elements/badge/index.html
+++ b/elements/badge/index.html
@@ -198,6 +198,13 @@
 
 <section class="section">
   <div class="container">
+    <article class="message is-warning">
+      <div class="message-body">
+        New version and its documentation is now available on its new repository <a href="https://github.com/CreativeBulma/bulma-badge/"
+          target="_blank">CreativeBulma - BulmaBadge</a>.
+      </div>
+    </article>
+    
     <div class="columns">
       <div class="column">
         <h1 class="title">Badge</h1>
