--- a/elements/tooltip/index.html
+++ b/elements/tooltip/index.html
@@ -212,7 +212,7 @@
 
 <section class="section">
   <div class="container">
-    <article class="message is-warning">
+    <article class="message is-danger">
       <div class="message-body">
         New version and its documentation is now available on its new repository <a href="https://github.com/CreativeBulma/bulma-tooltip/"
           target="_blank">CreativeBulma - BulmaTooltipt</a>.
