--- a/elements/badge/index.html
+++ b/elements/badge/index.html
@@ -198,7 +198,7 @@
 
 <section class="section">
   <div class="container">
-    <article class="message is-warning">
+    <article class="message is-danger">
       <div class="message-body">
         New version and its documentation is now available on its new repository <a href="https://github.com/CreativeBulma/bulma-badge/"
           target="_blank">CreativeBulma - BulmaBadge</a>.
