--- a/form/tagsinput/index.html
+++ b/form/tagsinput/index.html
@@ -210,7 +210,7 @@
 
 <section class="section">
   <div class="container">
-    <article class="message is-warning">
+    <article class="message is-danger">
       <div class="message-body">
         New version with a lot of new functionalities and its documentation is now available on its new repository <a href="https://github.com/CreativeBulma/bulma-tagsinput/"
           target="_blank">CreativeBulma - BulmaTagsInput</a>.
