--- a/form/slider/index.html
+++ b/form/slider/index.html
@@ -780,6 +780,7 @@
 </footer>
 
 <script src="https://wikiki.github.io/vendor/clipboard-1.7.1.min.js"></script>
+<script src="    https://cdn.jsdelivr.net/npm/bulma-slider@2.0.2/dist/js/bulma-slider.min.js"></script>
 <script src="https://wikiki.github.io/js/main.js?v=201911011043"></script>
 
 <script async defer type="text/javascript">
